# easychangedirectory

./: .gitignore  Cargo.toml  LICENSE  LICENSE-MIT  README.md  build.rs  codecov.yml  debug.ps1  debug.sh  renovate.json  rustfmt.toml
.devcontainer/: .devcontainer.json  Dockerfile  devcontainer.json  setup.sh
.github/workflows/: coverage.yml  release.yml  rust.yml
completion/: ed.bash
completions/: _ed  _ed.ps1  ed.bash  ed.fish
src/: action.rs  app.rs  cli.rs  connect.rs  env.rs  error.rs  frame.rs  info.rs  init.rs  items.rs  lib.rs  log.rs  main.rs  shell.rs  ui.rs
src/app/: _app.rs  app.rs  env_var.rs  init.rs  main.rs  mod.rs  read.rs  run.rs  search.rs  state.rs  ui.rs
src/app/item/: _item.rs  main.rs  mod.rs  read.rs
src/config/: env.rs  log.rs  mod.rs
templates/: bash.txt
templates/result/: ed.bash
tools/: script.ers
