[package]
name = "easychangedirectory"
description = "Tools for easy cd"
version = "0.8.0"
authors = ["dijdzv <dijdzv@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/dijdzv/easychangedirectory"
edition = "2021"
categories = ["command-line-utilities", "filesystem"]
keywords = ["cli","terminal","cd"]

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.19", features = ["cargo", "derive"] }
crossterm = "0.27.0"
envy = "0.4.2"
exitcode = "1.1.2"
handlebars = "4.3.7"
home = "0.5.5"
log = "0.4.19"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
simplelog = "0.12.1"
tui = "0.19.0"

[profile.release]
lto = true
codegen-units = 1
